--- a/scss/components/_logo.scss
+++ b/scss/components/_logo.scss
@@ -4,7 +4,7 @@
     font-family: 'Raleway';
     text-decoration: none;
 
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: 320px) {
     color: var(--color-accent);
     font-size: 24px;
     line-height: 1.17;
@@ -24,13 +24,15 @@
 }
   
   .header-nav__logo {
-    
+    display: inline-block;
 
-    @media screen and (min-width: 480px) {
-       color: var(--color-accent);
+    @media screen and (min-width: 320px) {
+      color: var(--color-accent);
+      margin-top: 16px;
+      margin-bottom: 16px;
     }
     
-    @media screen and (min-width: 767px) {
+    @media screen and (min-width: 768px) {
     margin-right: 93px;
     }
   
@@ -45,7 +47,7 @@
     margin-bottom: 20px;
     margin-right: 0;
 
-    @media screen and (min-width: 480px){
+    @media screen and (min-width: 320px){
       width: 154px;
       margin-left: auto;
       margin-right: auto;
@@ -53,6 +55,7 @@
     
     @media screen and (min-width: 1200px) {
       width: 145px;
+      margin-left: 0;
     }
     
   }
