--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -89,14 +89,14 @@
       width: 40px;
       height: 40px;
    
-  
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: transform 250ms var(--timing-function);
-    fill: var(--color-accent);
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      transition: transform 250ms var(--timing-function);
+      fill: #212121;
     }
 
+    
     // &.is-open .open-btn__close-element {
     //   display: block;
      
@@ -108,14 +108,14 @@
 
   }
 
-  .open-btn.is-open .close-element {
-      display: block;
+  // .open-btn.is-open .close-element {
+  //     display: block;
   
-    }
+  //   }
   
-  .open-btn.is-open .open-element {
-      display: none;
-    }
+  // .open-btn.is-open .open-element {
+  //     display: none;
+    // }
   .open-element {
     display: block;
     width: 24px;
@@ -124,7 +124,7 @@
   }
   
   .close-element {
-    display: none;
+    
 
     width: 18px;
     height: 18px;
