--- a/scss/components/_subscription.scss
+++ b/scss/components/_subscription.scss
@@ -49,6 +49,16 @@
       top:40%;
       
     }
+
+    @media screen and (min-width: 1200px) {
+      top: 70%;
+
+    }
+
+    // @media screen and (min-width: 1200px) {
+    //   top: 0;
+
+    // }
     
   }
   
@@ -69,7 +79,7 @@
     }
 
     @media screen and (min-width: 1200px) {
-      width: 358px;
+      max-width: 358px;
     }
 }
   
@@ -112,6 +122,8 @@
 
     @media screen and (min-width: 1200px) {
       position: absolute;
+      margin-top: 0;
+      margin-left: 12px;
     }
   
   &:hover,
