--- a/scss/layout/_benefits.scss
+++ b/scss/layout/_benefits.scss
@@ -28,9 +28,15 @@
      
    }
 
+
   @media screen and (min-width:768px) {
     width: calc((100% - 4 * 15px) / 2); 
     margin: 15px;
+    margin-top: 0;
+
+    &:not(:first-child) {
+    margin-top: 0;
+    }
   }
 
   @media screen and (min-width:1200px) {
@@ -105,7 +111,7 @@
     line-height: 1.14;
     text-transform: uppercase;
 
-    @media screen and (min-width:480px) {
+    @media screen and (min-width:320px) {
       text-align: center;
       letter-spacing: 0.03em;
       
