--- a/scss/layout/_client.scss
+++ b/scss/layout/_client.scss
@@ -29,6 +29,10 @@
     @media screen and (min-width: 320px){
       justify-content: center;
     }
+
+    @media screen and (min-width: 1200px) {
+      flex-wrap: nowrap;
+    }
         
   
   &__card {
@@ -36,6 +40,10 @@
     margin-top: 0px;
     @media screen and (min-width: 320px) {
       margin-bottom: 30px;
+    }
+
+    &:last-child {
+      margin-right: 0;
     }
   }
   
