--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -8,14 +8,22 @@
       display: flex;
       align-items: baseline;
 
-      @media screen and (min-width: 480px) {
+      @media screen and (min-width: 320px) {
         flex-wrap: wrap;
         justify-content: center;
         column-gap: 165px;
       }
       @media screen and (min-width: 768px) {
         display: flex;
+        
         align-items: baseline;
+      }
+
+      @media screen and (min-width: 1200px) {
+        flex-wrap: nowrap;
+        column-gap: 0;
+        
+        
       }
       
     }
@@ -23,7 +31,7 @@
  &-contact {
     width: 231px;
 
-    @media screen and (min-width: 480px) {
+    @media screen and (max-width: 767px) {
       text-align: center;
       margin-bottom: 60px;
     }
@@ -57,7 +65,7 @@
   }
   
     @media screen and (min-width: 1200px) {
-     
+   
     }
     
   }
