--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -1,4 +1,6 @@
 .hero {
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 0;
     margin-bottom: 0;
     background-color: var(--color-fon);
@@ -14,12 +16,16 @@
 
 
     max-width: 1600px;
-    margin-left: auto;
-    margin-right: auto;
+    
 
-    @media screen and (min-width: 480px)  {
+    @media screen and (min-width: 320px) and (max-width: 767px)  {
       max-width: 479px;
     }
+
+    @media screen and (min-width: 768px)  {
+      max-width: 768px;
+    }
+
   
   
   &__title {
