--- a/scss/layout/_portfolio-card.scss
+++ b/scss/layout/_portfolio-card.scss
@@ -14,7 +14,7 @@
     }
 
 
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 768px) {
       display: flex;
       flex-wrap: wrap;
     
@@ -32,7 +32,7 @@
     }
 
     @media screen and (min-width: 768px) {
-        
+      margin-right: 30px;
         flex-basis: calc((100% - 60px) / 2);
     }
 
