--- a/css/main.css
+++ b/css/main.css
@@ -89,19 +89,19 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
   .container {
-    width: 480px;
+    max-width: 480px;
   }
 }
 @media screen and (min-width: 768px) {
   .container {
-    width: 768px;
+    max-width: 768px;
   }
 }
 @media screen and (min-width: 1200px) {
   .container {
-    width: 1200px;
+    max-width: 1200px;
   }
 }
 
@@ -114,7 +114,7 @@ body {
   max-width: 480px;
   background-color: var(--white-color);
   z-index: 999;
-  transform: translateX(100%);
+  transform: translateX(150%);
   transition: transform 250ms ease-in-out;
 }
 @media screen and (min-width: 768px) {
@@ -488,7 +488,8 @@ body {
 }
 @media screen and (min-width: 320px) {
   .subscription__input {
-    width: 450px;
+    width: 100%;
+    max-width: 450px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -562,7 +563,7 @@ body {
   position: fixed;
   transition: opacity 250ms var(--timing-function), visibility 250ms var(--timing-function);
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
   .backdrop {
     overflow-y: scroll;
   }
@@ -579,6 +580,11 @@ body {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 }
+@media screen and (min-width: 320px) {
+  .modal {
+    max-width: 450px;
+  }
+}
 @media screen and (min-width: 480px) {
   .modal {
     width: 450px;
@@ -587,7 +593,6 @@ body {
 @media screen and (min-width: 1200px) {
   .modal {
     width: 528px;
-    height: 581px;
   }
 }
 
@@ -754,7 +759,7 @@ body {
   letter-spacing: 0.03em;
   margin-top: 20px;
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
   .checkbox-field {
     font-size: 12px;
     line-height: 1.17;
@@ -832,25 +837,31 @@ body {
   color: var(--white-color);
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
   .team-card {
     margin-left: auto;
     margin-right: auto;
+  }
+}
+@media screen and (min-width: 768px) {
+  .team-card {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
   }
 }
 @media screen and (min-width: 1200px) {
   .team-card {
     padding: 0;
     list-style: none;
-    display: flex;
-    margin-top: -30px;
-    margin-right: -30px;
+    margin: 0;
+    flex-wrap: nowrap;
   }
   .team-card:last-child {
     margin-right: 0;
   }
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
   .team-card .team-card__thumb {
     text-align: center;
   }
@@ -858,16 +869,33 @@ body {
 .team-card__item {
   margin-top: 30px;
 }
+@media screen and (min-width: 768px) {
+  .team-card__item {
+    width: calc((100% - 60px) / 2);
+    margin: 0 15px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .team-card__item {
     background-color: var(--white-color);
     flex-basis: calc((100% - 30px) / 4);
     margin-right: 30px;
+    margin-left: 0;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
   }
   .team-card__item:last-child {
     margin-right: 0px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .team-card__item:nth-child(-n+2) {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team-card__item:nth-child(-n+2) {
+    margin-bottom: 0;
   }
 }
 .team-card__content {
@@ -881,7 +909,7 @@ body {
   font-size: 16px;
   line-height: 1.19;
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
   .team-card__title {
     letter-spacing: 0.03em;
   }
@@ -890,7 +918,7 @@ body {
   font-size: 16px;
   line-height: 1.19;
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
   .team-card__text {
     letter-spacing: 0.03em;
   }
@@ -900,7 +928,7 @@ body {
   margin-top: 16px;
   margin-bottom: 0px;
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
   .team-card__social {
     justify-content: center;
   }
@@ -1010,13 +1038,19 @@ header {
 }
 @media screen and (min-width: 768px) {
   .adr-nav {
-    display: flex;
+    display: inline-block;
     margin-left: auto;
-    align-items: flex-end;
+    margin-top: 21px;
+    margin-right: 0;
+    margin-bottom: 11px;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
+  .adr-nav {
+    display: flex;
+    align-items: flex-end;
+  }
   .adr-nav__list:not(:last-child) {
     margin-right: 50px;
   }
@@ -1034,14 +1068,29 @@ header {
 @media screen and (min-width: 768px) {
   .adr-nav__icon-envelope {
     display: inline-block;
+    width: 14px;
+    height: 10px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .adr-nav__icon-envelope {
+    display: inline-block;
     width: 16px;
     height: 12px;
   }
 }
 
-.adr-nav__icon-telefon {
-  width: 10px;
-  height: 16px;
+@media screen and (min-width: 768px) {
+  .adr-nav__icon-telefon {
+    width: 10px;
+    height: 14px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .adr-nav__icon-telefon {
+    width: 10px;
+    height: 16px;
+  }
 }
 
 .adr-nav__link {
@@ -1053,6 +1102,14 @@ header {
   letter-spacing: 0.02em;
   text-decoration: none;
   transition: color 250ms var(--timing-function), fill 250ms var(--timing-function);
+}
+@media screen and (min-width: 768px) {
+  .adr-nav__link {
+    font-size: 12px;
+    line-height: 1.17;
+    padding-top: 0;
+    padding-bottom: 10px;
+  }
 }
 
 .adr-nav__link:hover,
@@ -1082,14 +1139,19 @@ header {
   background-repeat: no-repeat;
   max-width: 1600px;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 320px) {
   .hero {
-    max-width: 479px;
+    max-width: 480px;
   }
 }
 @media screen and (min-width: 768px) {
   .hero {
     max-width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    max-width: 1200px;
   }
 }
 .hero__title {
@@ -1105,9 +1167,10 @@ header {
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
   .hero__title {
-    width: 360px;
+    width: 100%;
+    max-width: 360px;
     font-size: 26px;
     line-height: 1.62;
     text-align: center;
@@ -1122,24 +1185,30 @@ header {
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
   .benefits {
     padding-top: 60px;
     padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .benefits {
+    padding-top: 94px;
+    padding-bottom: 94px;
   }
 }
 
 .benefits__text {
   line-height: 1.71;
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
   .benefits__text {
     letter-spacing: 0.03em;
     margin-top: 10px;
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
   .benefits__inner {
     width: 100%;
   }
@@ -1150,11 +1219,12 @@ header {
 @media screen and (min-width: 768px) {
   .benefits__inner {
     width: calc((100% - 60px) / 2);
-    margin: 15px;
-    margin-top: 0;
+    margin-right: 15px;
+    margin-top: 15px;
+    margin-left: 15px;
   }
   .benefits__inner:not(:first-child) {
-    margin-top: 0;
+    margin-top: 15px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -1191,19 +1261,22 @@ header {
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
   .benefits__list {
     text-align: center;
   }
 }
 @media screen and (min-width: 768px) {
   .benefits__list {
+    display: flex;
+    flex-wrap: wrap;
     margin: -15px;
   }
 }
 @media screen and (min-width: 1200px) {
   .benefits__list {
     display: flex;
+    flex-wrap: nowrap;
     margin-right: auto;
     margin-left: auto;
   }
@@ -1227,7 +1300,7 @@ header {
 .opportunities {
   padding-top: 0px;
 }
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1199px) {
   .opportunities {
     display: none;
   }
@@ -1236,20 +1309,36 @@ header {
 .section-team {
   background-color: var(--secondary-bg-color);
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
   .section-team {
     padding-top: 60px;
     padding-bottom: 60px;
   }
 }
+@media screen and (min-width: 1200px) {
+  .section-team {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
   .section-team__title {
     font-size: 28px;
     line-height: 1.18;
     letter-spacing: 0.03em;
     margin-top: 0px;
     margin-bottom: 0px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .section-team__title {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .section-team__title {
+    margin-bottom: 50px;
   }
 }
 
@@ -1277,10 +1366,18 @@ header {
 .our-client {
   display: flex;
   flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
 }
 @media screen and (min-width: 320px) {
   .our-client {
     justify-content: center;
+  }
+}
+@media screen and (min-width: 768px) {
+  .our-client {
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -1289,7 +1386,8 @@ header {
   }
 }
 .our-client__card {
-  margin-right: 30px;
+  margin-right: 15px;
+  margin-left: 15px;
   margin-top: 0px;
 }
 @media screen and (min-width: 320px) {
@@ -1297,22 +1395,39 @@ header {
     margin-bottom: 30px;
   }
 }
-.our-client__card:last-child {
-  margin-right: 0;
+@media screen and (min-width: 768px) {
+  .our-client__card {
+    width: calc((100% - 90px) / 3);
+  }
 }
-.our-client:last-child {
-  margin-right: 0;
-  margin-bottom: 0;
+@media screen and (min-width: 768px) {
+  .our-client__card:nth-last-child(-n+3) {
+    margin-bottom: 0;
+  }
 }
 .our-client__link {
   display: flex;
-  width: 170px;
   height: 92px;
   align-items: center;
   justify-content: center;
   border: 1px solid #afb1b8;
   border-radius: 4px;
   transition: border 250ms var(--timing-function), fill 250ms var(--timing-function);
+}
+@media screen and (min-width: 320px) {
+  .our-client__link {
+    width: 210px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .our-client__link {
+    width: 226px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .our-client__link {
+    width: 170px;
+  }
 }
 .our-client__link:hover, .our-client__link:focus {
   border: 1px solid var(--color-accent);
@@ -1416,9 +1531,9 @@ header {
 }
 
 .inviting {
-  width: 206px;
+  max-width: 206px;
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
   .inviting {
     margin-left: 0;
     margin-bottom: 60px;
@@ -1448,7 +1563,7 @@ header {
   color: var(--white-color);
   margin-top: 0px;
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
   .inviting__title {
     text-align: center;
   }
