--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -7,7 +7,7 @@
     position: fixed;
     transition: opacity 250ms var(--timing-function), visibility 250ms var(--timing-function);
 
-    @media screen and (min-width: 480px) {
+    @media screen and (min-width: 320px) {
       overflow-y: scroll;
     }
   }
@@ -30,6 +30,7 @@
   .modal {
    
       position: absolute;
+      // width: 100%;
       top: 50%;
       left: 50%;
       padding: 40px;
@@ -40,9 +41,14 @@
         0px 2px 1px rgba(0, 0, 0, 0.2);
       border-radius: 4px;
 
+      @media screen and (min-width: 320px) {
+        max-width: 450px;
+        
+      }
+
       @media screen and (min-width: 480px) {
         width: 450px;
-        
+
       }
 
     @media screen and (min-width: 1200px) {
@@ -52,7 +58,7 @@
       // transform: translate(-50%, -50%);
       // transition: transform 250ms var(--timing-function); 
       width: 528px;
-      height: 581px;
+      
       
     
       // background: var(--white-color);
