--- a/scss/components/_subscription.scss
+++ b/scss/components/_subscription.scss
@@ -74,7 +74,8 @@
     outline: none;
 
     @media screen and (min-width: 320px) {
-      width: 450px;
+      width: 100%;
+      max-width: 450px;
       
     }
 
