--- a/scss/components/_team-card.scss
+++ b/scss/components/_team-card.scss
@@ -1,17 +1,23 @@
 .team-card {
   
-  @media screen and (min-width:480px) {
+  @media screen and (min-width:320px) {
     margin-left: auto;
     margin-right: auto;
   }
 
+    @media screen and (min-width:768px){
+      display: flex;
+      flex-wrap: wrap;
+      margin: -15px;
+    }
+            
+
   @media screen and (min-width:1200px) {
     padding: 0;
     list-style: none;
-  
-    display: flex;
-    margin-top: -30px;
-    margin-right: -30px;
+    margin: 0;
+    flex-wrap: nowrap;
+   
 
   
   &:last-child {
@@ -21,7 +27,7 @@
   }
    
   .team-card__thumb {
-    @media screen and (min-width:480px) {
+    @media screen and (min-width:320px) {
       text-align: center;
     }
     
@@ -30,15 +36,20 @@
   &__item {
     margin-top: 30px;
 
-    @media screen and (min-width:480px) {
+    @media screen and (min-width:320px) {
     
     }
+    @media screen and (min-width:768px) {
+      width: calc((100% - 4 * 15px) / 2);
+      margin: 0 15px;
+    }
+       
     @media screen and (min-width:1200px) {
     
     background-color: var(--white-color);
     flex-basis: calc((100% - 30px) / 4);
-    
     margin-right: 30px;
+    margin-left: 0;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
@@ -49,7 +60,16 @@
     }
   }
   
-  
+  &__item:nth-child(-n+2) {
+    @media screen and (min-width:768px) {
+      margin-bottom: 30px;
+    }
+
+    @media screen and (min-width:1200px) {
+      margin-bottom: 0;
+    }
+    
+  }
 
   &__content {
     padding: 30px;
@@ -63,7 +83,7 @@
     font-size: 16px;
     line-height: 1.19;
 
-    @media screen and (min-width:480px) {
+    @media screen and (min-width:320px) {
       letter-spacing: 0.03em;
     }
   }
@@ -72,7 +92,7 @@
     font-size: 16px;
     line-height: 1.19;
     
-    @media screen and (min-width:480px) {
+    @media screen and (min-width:320px) {
       letter-spacing: 0.03em;
     }
     
@@ -85,7 +105,7 @@
     margin-top: 16px;
     margin-bottom: 0px;
 
-    @media screen and (min-width:480px) {
+    @media screen and (min-width:320px) {
       justify-content: center;
     }
   }
