--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -111,9 +111,9 @@
 }
 
   .inviting {
-    width: 206px;
+    max-width: 206px;
 
-    @media screen and (min-width: 480px) {
+    @media screen and (min-width: 320px) {
       margin-left: 0;
       margin-bottom: 60px;
     }
@@ -148,7 +148,7 @@
   
     margin-top: 0px;
 
-    @media screen and (min-width: 480px) {
+    @media screen and (min-width: 320px) {
     text-align: center;
     }
   }
