--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -18,12 +18,16 @@
     max-width: 1600px;
     
 
-    @media screen and (min-width: 320px) and (max-width: 767px)  {
-      max-width: 479px;
+    @media screen and (min-width: 320px)  {
+      max-width: 480px;
     }
 
     @media screen and (min-width: 768px)  {
       max-width: 768px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      max-width: 1200px;
     }
 
   
@@ -41,8 +45,9 @@
     letter-spacing: 0.06em;
     text-transform: uppercase;
 
-    @media screen and (min-width: 480px) {
-      width: 360px;
+    @media screen and (min-width: 320px) {
+      width: 100%;
+      max-width: 360px;
       font-size: 26px;
       line-height: 1.62;
       text-align: center;
