--- a/scss/layout/_team.scss
+++ b/scss/layout/_team.scss
@@ -1,16 +1,21 @@
 .section-team {
     background-color: var(--secondary-bg-color);
 
-    @media screen and (min-width:480px) {
+    @media screen and (min-width:320px) {
       padding-top: 60px;
       padding-bottom: 60px; 
+    }
+
+    @media screen and (min-width:1200px) {
+      padding-top: 94px;
+      padding-bottom: 94px;
     }
   }
 
   .section-team__title {
     @extend %title;
 
-    @media screen and (min-width:480px) {
+    @media screen and (min-width:320px) {
       font-size: 28px;
       line-height: 1.18;
       letter-spacing: 0.03em;
@@ -19,4 +24,13 @@
       margin-bottom: 0px; 
 
     }
+
+    @media screen and (min-width:768px) {
+      margin-bottom: 30px;
+    }
+
+    @media screen and (min-width:1200px) {
+      margin-bottom: 50px;
+    }
+
   }
