--- a/css/main.css
+++ b/css/main.css
@@ -164,25 +164,24 @@ body {
 }
 .mobile-menu {
   background-color: var(--white-color);
-  padding: 0;
   margin: 0;
   list-style: none;
+  height: 796px;
+  padding: 48px 40px;
 }
 
-.header-nav__item-mobile {
+.header-nav__item-component {
   position: relative;
   display: flex;
   align-items: center;
-  padding: 48px 40px;
   max-width: 480px;
-  height: 796px;
 }
 
 @media screen and (max-width: 767px) {
   .site-nav-mobile {
     position: absolute;
-    top: 48px;
-    left: 40px;
+    top: 0;
+    left: 0;
     font-size: 40px;
   }
 }
@@ -758,18 +757,8 @@ body {
   justify-content: center;
   letter-spacing: 0.03em;
   margin-top: 20px;
-}
-@media screen and (min-width: 320px) {
-  .checkbox-field {
-    font-size: 12px;
-    line-height: 1.17;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .checkbox-field {
-    font-size: 14px;
-    line-height: 1.71;
-  }
+  font-size: 12px;
+  line-height: 1.17;
 }
 .checkbox-field__input {
   width: 1px;
