--- a/scss/components/_checkbox.scss
+++ b/scss/components/_checkbox.scss
@@ -4,16 +4,14 @@
     justify-content: center;
     letter-spacing: 0.03em;
     margin-top: 20px;
+    font-size: 12px;
+    line-height: 1.17;
 
-    @media screen and (min-width: 320px) {
-      font-size: 12px;
-      line-height: 1.17;
-    }
-      
-    @media screen and (min-width: 1200px) {
-      font-size: 14px;
-      line-height: 1.71;
-    }
+         
+    // @media screen and (min-width: 1200px) {
+    //   font-size: 14px;
+    //   line-height: 1.71;
+    // }
   
   &__input {
    
