--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -14,10 +14,15 @@
     background-position: center;
     background-repeat: no-repeat;
 
-
     max-width: 1600px;
-    
 
+    @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+        background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url('../../img/img_hero.jpg');
+        }
+  
     @media screen and (min-width: 320px)  {
       max-width: 480px;
       background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
@@ -31,10 +36,9 @@
     }
 
     @media screen and (min-width: 1200px) {
-      max-width: 1200px;
+      max-width: 1600px;
     }
 
-  
   
   &__title {
     color: var(--white-color);
