--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -20,7 +20,7 @@
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
         background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url('../img/img_hero.jpg');
+        url('../../img/img_hero@2x.jpg');
         }
   
     @media screen and (min-width: 320px)  {
