--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -9,7 +9,7 @@
     text-align: center;
   
     background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../img/img_hero.jpg');
+      url('../../img/img_hero.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
