--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -9,7 +9,7 @@
     text-align: center;
   
     background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../../img/img_hero.jpg');
+      url('../../img/foto1-1110.jpg');
       
     background-size: cover;
     background-position: center;
@@ -21,7 +21,7 @@
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
         background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url('../../img/img_hero@2x.jpg');
+        url('../../img/foto1-1110.jpg');
         }
   
     // @media screen and (min-width: 320px)  {
