--- a/css/main.css
+++ b/css/main.css
@@ -1118,35 +1118,23 @@ header {
 }
 
 .hero {
-  margin-left: auto;
-  margin-right: auto;
   margin-top: 0;
   margin-bottom: 0;
   background-color: var(--color-fon);
   padding-top: 118px;
   padding-bottom: 118px;
   text-align: center;
-  background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/img/img_hero.jpg");
+  background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/img_hero.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
 }
-@media screen and (min-width: 320px) {
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
-    max-width: 480px;
-    background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/img/img_hero.jpg");
-  }
-}
-@media screen and (min-width: 768px) {
-  .hero {
-    max-width: 768px;
-    background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/img/img_hero.jpg");
-  }
-}
-@media screen and (min-width: 1200px) {
-  .hero {
-    max-width: 1200px;
+    background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img/img_hero@2x.jpg");
   }
 }
 .hero__title {
