--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -1,27 +1,25 @@
 .hero {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 0;
-    margin-bottom: 0;
-    background-color: var(--color-fon);
-    padding-top: 118px;
-    padding-bottom: 118px;
-    text-align: center;
-  
-    background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../../img/foto1-1110.jpg');
-      
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+  margin-top: 0;
+  margin-bottom: 0;
+  background-color: var(--color-fon);
+  padding-top: 118px;
+  padding-bottom: 118px;
+  text-align: center;
 
-    max-width: 1600px;
-
+  background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url('../img/img_hero.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
+   
     @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
         background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url('../../img/foto1-1110.jpg');
+        url('../../img/img_hero@2x.jpg');
         }
   
     // @media screen and (min-width: 320px)  {
