--- a/css/main.css
+++ b/css/main.css
@@ -1137,6 +1137,23 @@ header {
     background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img/img_hero@2x.jpg");
   }
 }
+@media screen and (min-width: 320px) {
+  .hero {
+    max-width: 480px;
+    background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img/img_hero.jpg");
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    max-width: 768px;
+    background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img/img_hero.jpg");
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    max-width: 1600px;
+  }
+}
 .hero__title {
   color: var(--white-color);
   font-weight: 900;
