--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -22,21 +22,21 @@
         url('../../img/img_hero@2x.jpg');
         }
   
-    // @media screen and (min-width: 320px)  {
-    //   max-width: 480px;
-    //   background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    //     url('../../img/img_hero.jpg');
-    // }
+    @media screen and (min-width: 320px)  {
+      max-width: 480px;
+      background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url('../../img/img_hero.jpg');
+    }
 
-    // @media screen and (min-width: 768px)  {
-    //   max-width: 768px;
-    //   background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    //     url('../../img/img_hero.jpg');
-    // }
+    @media screen and (min-width: 768px)  {
+      max-width: 768px;
+      background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url('../../img/img_hero.jpg');
+    }
 
-    // @media screen and (min-width: 1200px) {
-    //   max-width: 1600px;
-    // }
+    @media screen and (min-width: 1200px) {
+      max-width: 1600px;
+    }
 
   
   &__title {
