--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -66,7 +66,8 @@
   (min-resolution:192dpa) ,
   (min-resolution:2dppx) {
     & {
-    background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/img/Img_hero@2x.jpg);
+    background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+     url('../img/Img_hero@2x.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
