--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -62,17 +62,17 @@
     }
   }
 
-  @media (min-device-pixel-ratio:2) ,
-  (min-resolution:192dpa) ,
-  (min-resolution:2dppx) {
-    & {
-    background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-     url('../img/Img_hero@2x.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+  // @media (min-device-pixel-ratio:2) ,
+  // (min-resolution:192dpa) ,
+  // (min-resolution:2dppx) {
+  //   & {
+  //   background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+  //    url('../img/Img_hero@2x.jpg');
+  //   background-size: cover;
+  //   background-position: center;
+  //   background-repeat: no-repeat;
 
-    }
-  }
+  //   }
+  // }
 
 }
