--- a/css/main.css
+++ b/css/main.css
@@ -244,6 +244,7 @@ body {
 .logo {
   font-family: "Raleway";
   text-decoration: none;
+  color: var(--title-text-color);
 }
 @media screen and (min-width: 320px) {
   .logo {
@@ -269,7 +270,7 @@ body {
 }
 @media screen and (min-width: 320px) {
   .header-nav__logo {
-    color: var(--color-accent);
+    color: var(--title-text-color);
     margin-top: 16px;
     margin-bottom: 16px;
   }
@@ -1151,6 +1152,8 @@ header {
 }
 @media screen and (min-width: 1200px) {
   .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
     max-width: 1600px;
   }
 }
