--- a/scss/components/_logo.scss
+++ b/scss/components/_logo.scss
@@ -3,7 +3,7 @@
   .logo {
     font-family: 'Raleway';
     text-decoration: none;
-
+    color: var(--title-text-color);
   @media screen and (min-width: 320px) {
     color: var(--color-accent);
     font-size: 24px;
@@ -27,7 +27,7 @@
     display: inline-block;
 
     @media screen and (min-width: 320px) {
-      color: var(--color-accent);
+      color: var(--title-text-color);
       margin-top: 16px;
       margin-bottom: 16px;
     }
