--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -35,6 +35,8 @@
     }
 
     @media screen and (min-width: 1200px) {
+      padding-top: 200px;
+      padding-bottom: 200px;
       max-width: 1600px;
     }
 
@@ -61,18 +63,5 @@
       
     }
   }
-
-  // @media (min-device-pixel-ratio:2) ,
-  // (min-resolution:192dpa) ,
-  // (min-resolution:2dppx) {
-  //   & {
-  //   background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-  //    url('../img/Img_hero@2x.jpg');
-  //   background-size: cover;
-  //   background-position: center;
-  //   background-repeat: no-repeat;
-
-  //   }
-  // }
-
+ 
 }
