--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -34,6 +34,7 @@
     @media screen and (max-width: 767px) {
       text-align: center;
       margin-bottom: 60px;
+      
     }
     
   }
@@ -59,7 +60,7 @@
   @media screen and (min-width: 480px) {
     .footer-adr {
       text-align: center;
-        margin-bottom: 60px;
+     
     }
     
   }
@@ -108,6 +109,14 @@
   &__item:first-child {
     margin-top: 0px;
   }
+
+    @media screen and (min-width: 768px) {
+      margin-bottom: 60px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 0;
+    }
 }
 
   .inviting {
@@ -120,6 +129,7 @@
 
     @media screen and (min-width: 1200px) {
       margin-left: 70px;
+      margin-bottom: 0;
     }
     
  
