--- a/css/main.css
+++ b/css/main.css
@@ -178,6 +178,7 @@ body {
   display: flex;
   align-items: center;
   max-width: 480px;
+  height: 100vh;
 }
 
 @media screen and (max-width: 767px) {
@@ -201,6 +202,7 @@ body {
     position: absolute;
     top: 562px;
     left: 40px;
+    margin-bottom: 32px;
   }
 }
 @media screen and (min-width: 320px) {
