--- a/scss/components/_mobile-container.scss
+++ b/scss/components/_mobile-container.scss
@@ -98,7 +98,7 @@
     display: flex;
     align-items: center;
     max-width: 480px;
-   
+    height: 100vh;  
 }
 
 .site-nav-mobile {
@@ -127,6 +127,7 @@
         position: absolute;
         top: 562px;
         left: 40px;
+        margin-bottom: 32px;
     }
 
     &__icon {
