--- a/scss/components/_mobile-container.scss
+++ b/scss/components/_mobile-container.scss
@@ -89,7 +89,7 @@
     
     margin: 0;
     list-style: none;
-    height: 796px;
+    height: 100% w;
     padding: 48px 40px;
 }
 
@@ -99,6 +99,7 @@
     align-items: center;
     max-width: 480px;
     height: 100vh;  
+    background-color: var(--white-color);
 }
 
 .site-nav-mobile {
@@ -162,11 +163,17 @@
 }
 
 .adr-nav-mobile__link-tel {
-  @media screen and (min-width: 320px) {
-    font-size: 34px;
+    @media screen and (min-width: 320px){
+    font-size: 30px;
     line-height: 1.18;
     letter-spacing: 0.02em;
+    }
+    
+  @media screen and (min-width: 480px) {
+    font-size: 34px;
+   
   }
+
 }
 
 .adr-nav-mobile__link-mail {
