--- a/scss/layout/_client.scss
+++ b/scss/layout/_client.scss
@@ -46,6 +46,7 @@
     margin-top: 0px;
     @media screen and (min-width: 320px) {
       margin-bottom: 30px;
+      width: calc((100% - 4 * 15px) / 2);
     }
 
     @media screen and (min-width: 768px) {
@@ -85,15 +86,15 @@
     transition: border 250ms var(--timing-function), fill 250ms var(--timing-function);
   
     @media screen and (min-width: 320px){
-      width: 210px;
+      max-width: 210px;
     }
 
     @media screen and (min-width: 768px) {
-      width: 226px;
+      max-width: 226px;
     }
 
     @media screen and (min-width: 1200px) {
-      width: 170px;
+      max-width: 170px;
     }
   }
   
