--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -79,14 +79,22 @@
   } 
 
   .wrapper {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      text-align: center
+    }
+    
 
   &__link {
     color: rgba(255, 255, 255, 0.6);
     font-family: 'Roboto';
     font-style: normal;
-    line-height: 1.7;
+    font-weight: 400;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
     text-decoration: none;
     transition: color 250ms var(--timing-function);
+
+    
   }
   
   &__link:hover,
