--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -132,6 +132,8 @@ header {
   
     color: var(--primary-text-color);
     font-weight: 500;
+    // font-size: 14px;
+    //   line-height: 1.14;
     letter-spacing: 0.02em;
     text-decoration: none;
 
@@ -148,7 +150,13 @@ header {
     @media screen and (min-width: 1200px) {
       font-size: 14px;
       line-height: 1.14;
+
     }
+
+    // @media screen and (min-width: 1200px) {
+    //   font-size: 14px;
+    //   line-height: 1.14;
+    // }
         
     
   }
